src/objects/WorkOrder.object
<CustomObject>
    <fields>
        <fullName>DE_Effective_Total_Price__c</fullName>
        <label>Effective Total Price</label>
        <summarizedField>ProductConsumed.DE_Total_Effective_Amount__c</summarizedField>
        <summaryForeignKey>ProductConsumed.WorkOrderId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Work_End__c</fullName>
        <description>Time when the work on site is finished, also displayed in Service Report</description>
        <label>Work End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Work_Start__c</fullName>
        <description>Start time of the work on site to be displayed in the Service Report</description>
        <label>Work Start</label>
        <type>DateTime</type>
    </fields>
</CustomObject>